--- a/WPlusPlus/WPlusPlus.csproj
+++ b/WPlusPlus/WPlusPlus.csproj
@@ -6,5 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WPlusPlus.Shared\WPlusPlus.Shared.csproj" />
+</ItemGroup>
+
 
 </Project>
