improved Nuget packages support + added better syntax highlighting in the VScode extension

--- a/IngotCLI/IngotCLI.csproj
+++ b/IngotCLI/IngotCLI.csproj
@@ -13,4 +13,8 @@
       <ProjectReference Include="..\WPlusPlus.Shared\WPlusPlus.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
