--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,10 @@ on:
   push:
     tags:
       - 'v*'
+
 permissions:
   contents: write
+
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
@@ -30,6 +32,15 @@ jobs:
             --self-contained true \
             /p:PublishSingleFile=true \
             -o output/${{ matrix.os }}
+
+      - name: Rename binary to 'ingot'
+        run: |
+          cd output/${{ matrix.os }}
+          if [[ "${{ matrix.os }}" == win-x64 ]]; then
+            mv IngotCLI.exe ingot.exe
+          else
+            mv IngotCLI ingot
+          fi
 
       - name: Archive binaries
         run: |
