--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,29 +1,29 @@
-name: 🚢 W++ Docker Build & Push
+name: 🚢 W++ Docker Build, Push & Readme Sync
 
 on:
   release:
     types: [published]
-  workflow_dispatch:  # Allow manual triggering
+  workflow_dispatch:
 
 jobs:
   build-and-push:
-    name: 🛠️ Build and Push Docker Image
+    name: 🛠️ Build & Push Docker Image
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🧾 Checkout source
+      - name: 📥 Checkout source
         uses: actions/checkout@v4
 
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🔐 Log in to Docker Hub
+      - name: 🔐 Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 🔧 Build and Push Docker Image
+      - name: 🔧 Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./Docker
@@ -33,3 +33,21 @@ jobs:
           tags: |
             sinistermage/wpp:latest
             sinistermage/wpp:${{ github.event.release.tag_name || 'manual' }}
+
+  update-readme:
+    name: 📝 Update Docker Hub README
+    runs-on: ubuntu-latest
+    needs: build-and-push
+
+    steps:
+      - name: 📥 Checkout source
+        uses: actions/checkout@v4
+
+      - name: 🐳 Push README to Docker Hub
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: sinistermage/wpp
+          readme-filepath: ./Docker/README.md
+          short-description: "The W++ scripting language (CLI) in a Docker container"
