--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,34 +71,31 @@ jobs:
           echo "✅ Configured LLVM for Apple Silicon at $LLVM_DIR"
 
       # === Windows LLVM ===
-      - name: 🪟 Install LLVM on Windows (Manual)
+      - name: 🪟 Install LLVM on Windows (with llvm-config)
         if: runner.os == 'Windows'
         shell: pwsh
         run: |
-          Write-Host "⬇️ Downloading LLVM 15 prebuilt binaries..."
-          $llvmInstaller = "llvm-installer.exe"
-          Invoke-WebRequest -Uri "https://github.com/llvm/llvm-project/releases/download/llvmorg-15.0.7/LLVM-15.0.7-win64.exe" -OutFile $llvmInstaller
+          Write-Host "⬇️ Installing LLVM ${{ matrix.llvm }} via Chocolatey..."
+          choco install llvm --version=${{ matrix.llvm }}.0 --force -y
           
-          Write-Host "📦 Installing LLVM to C:\LLVM..."
-          Start-Process -FilePath $llvmInstaller -ArgumentList "/S", "/D=C:\LLVM" -Wait
-          
-          $llvmPath = "C:\LLVM"
+          $llvmPath = "C:\Program Files\LLVM"
           $llvmBin = "$llvmPath\bin"
 
-          # Export environment variables (important for llvm-sys)
+          # Export environment variables for llvm-sys
           "LLVM_SYS_${{ matrix.llvm }}_PREFIX=$llvmPath" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
           "LLVM_CONFIG_PATH=$llvmBin\llvm-config.exe" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
 
-          # Add to PATH properly
+          # Add LLVM to PATH
           $llvmBin | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
           Write-Host "✅ LLVM installed at $llvmPath"
           if (Test-Path "$llvmBin\llvm-config.exe") {
-            Write-Host "🔍 LLVM version check:"
+            Write-Host "🔍 llvm-config.exe found! Version:"
             & "$llvmBin\llvm-config.exe" --version
           } else {
-            Write-Host "⚠️ llvm-config.exe not found — build may fail."
+            Write-Host "❌ llvm-config.exe not found; printing directory contents..."
             Get-ChildItem $llvmBin
+            exit 1
           }
 
 
